[gd_scene load_steps=27 format=3 uid="uid://jni2ohy082sa"]

[ext_resource type="Script" path="res://StoreComponent/Skeleton/Skeleton.gd" id="1_uyjwg"]
[ext_resource type="Texture2D" uid="uid://lafke3sp2gl4" path="res://StoreComponent/Skeleton/Skeleton Dead.png" id="2_doq3p"]
[ext_resource type="Texture2D" uid="uid://3u55hv34am7a" path="res://StoreComponent/Skeleton/Skeleton Hold.png" id="3_2ubvw"]
[ext_resource type="Texture2D" uid="uid://bxsvanwb75ucb" path="res://StoreComponent/Skeleton/Skeleton Walk.png" id="4_xxskk"]
[ext_resource type="PackedScene" uid="uid://dpxxr0w2q7uqq" path="res://sounds/Sound.tscn" id="5_vadeg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8231y"]
atlas = ExtResource("2_doq3p")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ho5x"]
atlas = ExtResource("2_doq3p")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8alcy"]
atlas = ExtResource("2_doq3p")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbbkd"]
atlas = ExtResource("2_doq3p")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq4wx"]
atlas = ExtResource("2_doq3p")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_inhxt"]
atlas = ExtResource("3_2ubvw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nosf8"]
atlas = ExtResource("3_2ubvw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g88j5"]
atlas = ExtResource("3_2ubvw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xy32"]
atlas = ExtResource("3_2ubvw")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7crdx"]
atlas = ExtResource("3_2ubvw")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxafx"]
atlas = ExtResource("3_2ubvw")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blnv2"]
atlas = ExtResource("3_2ubvw")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fgan"]
atlas = ExtResource("3_2ubvw")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j40ue"]
atlas = ExtResource("4_xxskk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hw1k"]
atlas = ExtResource("4_xxskk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sj6d"]
atlas = ExtResource("4_xxskk")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfn2g"]
atlas = ExtResource("4_xxskk")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs0wa"]
atlas = ExtResource("4_xxskk")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xng8"]
atlas = ExtResource("4_xxskk")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gd428"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8231y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ho5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8alcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbbkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq4wx")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_inhxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nosf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g88j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xy32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7crdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxafx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blnv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fgan")
}],
"loop": false,
"name": &"grab",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j40ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hw1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sj6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfn2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs0wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xng8")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uxnwm"]
radius = 24.0

[node name="Skeleton" type="Node2D"]
script = ExtResource("1_uyjwg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gd428")
animation = &"die"
autoplay = "move"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 72.0

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_uxnwm")

[node name="CarriedItem" type="Sprite2D" parent="."]

[node name="Sound" parent="." instance=ExtResource("5_vadeg")]

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
